--- a/.github/workflows/updateData.yml
+++ b/.github/workflows/updateData.yml
@@ -19,6 +19,10 @@ jobs:
         with:
           node-version: "20"
 
+      - name: Install dependencies
+        run: |
+          npm install
+
       - name: Run update script
         run: |
           node updateData.js
