--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "dependencies": {
     "@bgd-labs/aave-address-book": "^2.27.0",
+    "@lidofinance/lido-ethereum-sdk": "^3.2.1",
     "viem": "^2.12.1"
   }
 }
